--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: 42Crunch/api-security-audit-action@v1
+      - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
       - name: 42Crunch REST API Static Security Testing
