Hopefully working now

--- a/42c-conf.yaml
+++ b/42c-conf.yaml
@@ -23,4 +23,4 @@
 
 audit:
   mapping:
-    Pixi_Github.json: b1246c2f-e43b-49bf-8579-2fe2549b1090
+    swaggers/Pixi_Github.json: b1246c2f-e43b-49bf-8579-2fe2549b1090
